test/error1.frt.test
ERROR
Error at "error1.frt:2:1" : unexpected |]