test/error1.frt
it shouldn't have un matching @|] at the end
|]